# ephemeral-chat

./: .gitignore  Cargo.toml  README.md  default.nix  package-lock.json  package.json
dna/coordinator_zomes/chat/: Cargo.toml
dna/coordinator_zomes/chat/src/: entry_def_0.rs  lib.rs
dna/integrity_zomes/chat/: Cargo.toml
dna/integrity_zomes/chat/src/: lib.rs
dna/integrity_zomes/chat/src/entry_def_0/: definition.rs
dna/workdir/: dna.yaml
nix/: sources.json
tests/src/: index.ts  utils.ts
tests/src/ephemeral_chat/chat/: entry_def_0.ts
ui/: index.html  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
ui/src/: bruner-chat-app.ts  burner-chat-app.ts  burner-service.ts  burner-store.ts  contexts.ts  fonts.ts  holochain-app.ts  images.ts  index.ts
ui/src/components/: chat-bubble.ts  chat-screen.ts  create-entry-def-0.ts  entry-def-0-detail.ts  group-list.ts  menu.ts  service-context.ts
ui/src/components/ephemeral_chat/chat/: create-entry-def-0.ts  entry-def-0-detail.ts
ui/src/helpers/: random-avatars.ts
ui/src/types/: chat.ts
ui/src/types/ephemeral_chat/: chat.ts
we-applet/: package.json
we-applet/demo/: index.html
we-applet/src/: burner-chat-applet-group-view.ts  burner-chat-applet.ts  index.ts  sharedStyles.ts
we-applet/src/components/: burner-chat-group-app.ts  group-chat-screen.ts  we-group-chat-screen.ts
we-applet/src/unused/: burner-chat-applet-group-view.ts  group-chat-screen-unused.ts
we-applet/workdir/: dna.yaml  happ.yaml  web-happ.yaml
workdir/: happ.yaml  web-happ.yaml
