[package]
edition = "2021"
name = "chat_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "chat_integrity"

[dependencies]
hdi = { workspace = true }
hdk = { workspace = true }
serde = { workspace = true }
derive_more = "0"
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }

